--- a/confetti_cuisine_mvc/package.json
+++ b/confetti_cuisine_mvc/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0",
-    "http-status-codes": "^1.4.0",
-    "mongoose": "^5.8.6"
+    "body-parser": "^1.17.2",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "express-ejs-layouts": "^2.3.0",
+    "http-status-codes": "^1.3.0",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.0.0-rc1"
   }
 }
